--- a/src/index.scss
+++ b/src/index.scss
@@ -12,6 +12,6 @@ $mainTransition: all 0.3s linear;
 
 body {
   font-family: "Open Sans", sans-serif;
-  background: $mainGrey;
+  background: $mainWhite;
   color: $mainBlack;
 }
